# llamail

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh  start.sh  start_llama_servers.sh
docs/: bulk-import-guide.md  n8n-telegram-ssl-guide.md  setup-guide.md
email_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/email_service/: config.py  dependencies.py  main.py
src/email_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/email_service/models/: database.py  schemas.py
src/email_service/routes/: health.py  telegram.py
src/email_service/services/: campaign_sender.py  cmd_campaign.py  cmd_draft.py  cmd_email.py  cmd_import.py  email_processor.py  embeddings.py  gmail_client.py  handler_state.py  import_coordinator.py  import_worker.py  llm.py  search.py  send_scheduler.py  telegram_handler.py  telegram_notifier.py  token_budget.py
src/email_service/templates/: ask.j2  classify_intent.j2  classify_reply.j2  draft_new.j2  draft_reply.j2  summarize.j2  summarize_chunk.j2
webservice/: .env.example  pyproject.toml
webservice/src/email_service/: config.py  main.py
webservice/src/email_service/models/: database.py
webservice/src/email_service/routes/: imports.py  process.py  telegram.py
webservice/src/email_service/services/: campaign_engine.py  chat_memory.py  chunker.py  cmd_draft.py  cmd_email.py  email_processor.py  send_scheduler.py  utils.py
webservice/src/email_service/templates/: ask.j2  chitchat.j2  classify_intent.j2  classify_reply.j2  draft_new.j2  draft_reply.j2  (+5 more)
